Fix FormPost 'Post as' text margin collapsing with parent margin causing an empty space to appear at the top of the FormPost element.

--- a/src/client/scss/components/_FormPost.scss
+++ b/src/client/scss/components/_FormPost.scss
@@ -1,6 +1,7 @@
 .post-form {
 	position: relative;
 	border-bottom: 1px solid $blue-mid;
+	overflow: auto;
 
 	&__author, &__form {
 		margin: 10px;
